# pdftoExl

./: .env.example  .gitignore  CLAUDE.md  Makefile  README.md  config.yaml  extract_form.py  out.json  out.xlsx  pyproject.toml  pytest.ini  requirements.txt
app/: config.py  main.py  models.py  observability.py
app/services/: agentic_extractor.py  excel_writer.py  extractor.py  normalize.py  pdf_batches.py  prompts.py  section_refiner.py  semantic_pass_agent.py
app/templates/: index.html
developer-docs/: README.md
developer-docs/evals/: README.md  contracts.md  eval-A-enriched-json.md  eval-B-workbook.md  eval-C-end-to-end.md  eval-D-semantic-equivalence.md  eval-E-cost-latency.md  fixtures.md  metrics-glossary.md
developer-docs/issues/: 00-overview.md  01-extraction-canonical-json.md  02-rule-based-classification.md  03-ambiguity-decision-gate.md  04-llm-refinement.md  05-merge-enriched-json.md  06-golden-template-mapping.md  07-excel-writer-output.md  08-golden-template-contract.md  09-observability-and-logging.md  10-cost-and-latency-budget.md  11-security-pii-handling.md
docs/: CHOICES Safety Determination Form-1-3-export.xlsx  agentic_extractor_review.md  requirements.md
docs/architecture/: architecture_v1.md
docs/support_docs/: CHOICES Safety Determination Request Form Final_11_20.xlsx  Configuration_Workflow.docx  TX LTSS - 1700-3, Individual Service Plan - Signature Page.xlsx
evals/: __init__.py  fixtures.yaml  test_agentic_extractor_mock.py  test_api_bedrock_eval.py  test_offline_fixtures.py  utils.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: main.tsx  styles.css
src/pdftoxl/: cli.py  pipeline.py
tests/: conftest.py  test_excel_writer.py  test_normalize.py  test_section_refiner.py
tests/integration/: test_cli.py  test_pipeline_v1_smoke.py  (+1 more)
(+44 files in other folders)
